no clue anymore

--- a/config.yaml
+++ b/config.yaml
@@ -51,4 +51,6 @@ players:
     platform: "EUW1"
   - riot_id: "Youngstroker#Tuah"
     platform: "EUW1"
+  - riot_id: "Patlla#2209"
+    platform: "EUW1"
   
