--- a/config.yaml
+++ b/config.yaml
@@ -33,24 +33,35 @@ discord:
 players:
   - riot_id: "Hutao#Gojo"
     platform: "EUW1"
+    discord_id: "223744270102822912"
   - riot_id: "Alien#Balls"
     platform: "EUW1"
+    discord_id: "244328302356070402"
   - riot_id: "Shingus#INTWN"
     platform: "EUW1"
+    discord_id: "572470064448536586"
   - riot_id: "Mag1c#1204"
     platform: "EUW1"
+    discord_id: "637666684408430633"
   - riot_id: "Shn0wy#feet"
     platform: "EUW1"
+    discord_id: "479962949465931787"
   - riot_id: "DiabeticDaddy77#78178"
     platform: "EUW1"
+    discord_id: "1282804029046653059"
   - riot_id: "Austinhio#80085"
     platform: "EUW1"
+    discord_id: "1108664897081966643"
   - riot_id: "Goldrinnus#911"
     platform: "EUW1"
+    discord_id: "397775111463370754"
   - riot_id: "Groben#Lis"
     platform: "EUW1"
+    discord_id: "1125837884545585223"
   - riot_id: "Youngstroker#Tuah"
     platform: "EUW1"
+    discord_id: "1177025179713552435"
   - riot_id: "Patlla#2209"
     platform: "EUW1"
+    discord_id: "443095170783772672"
   
