Changed riot tag of player

--- a/config.yaml
+++ b/config.yaml
@@ -40,7 +40,7 @@ players:
   - riot_id: "Shingus#INTWN"
     platform: "EUW1"
     discord_id: "572470064448536586"
-  - riot_id: "Mag1c#1204"
+  - riot_id: "Mag1c#chud"
     platform: "EUW1"
     discord_id: "637666684408430633"
   - riot_id: "Shn0wy#feet"
