Added high scores

--- a/config.yaml
+++ b/config.yaml
@@ -55,7 +55,7 @@ players:
   - riot_id: "Goldrinnus#911"
     platform: "EUW1"
     discord_id: "397775111463370754"
-  - riot_id: "Groben#Lis"
+  - riot_id: "slugdar#Lis"
     platform: "EUW1"
     discord_id: "1125837884545585223"
   - riot_id: "Youngstroker#Tuah"
